доделал задание два, все пункты выполнены

--- a/lesson_first/second_task.html
+++ b/lesson_first/second_task.html
@@ -81,18 +81,24 @@
             for (let i = 0; i < tablesNumber.length; i++) {
                 function tableConverter() {
                     let table = document.getElementsByTagName("table")[i].tBodies[0];
-                    let tableRowsCounter = table.rows.length;
                     let tableArray = [];
+                    let tableRowsCounter = table.rows.length;
                     for (let k = 1; k < tableRowsCounter; k++) {
-                        let tableSingleRow = table.rows[k];
                         let tableObject = {};
                         let headerCounter = document.getElementsByTagName('th').length;
+
+                        // let headerParsingData = document.getElementsByTagName('th');
+                        // console.log(headerParsingData[k].attributes[0]);
+                        let text = "Some text";
+
+
+                        let tableSingleRow = table.rows[k];
                         let tableItemsCounter = tableSingleRow.getElementsByTagName('td').length;
                         for (let j = 0; j < tableItemsCounter; j++) {
                             let tableTitle = document.getElementsByTagName('th')[j%headerCounter].innerHTML.replace(/(?:^\w|[A-Z]|\b\w)/g, function(letter, index) {
                                 return index === 0 ? letter.toLowerCase() : letter.toUpperCase();
                             }).replace(/\s+/g, '');
-                            tableObject[tableTitle] = tableSingleRow.getElementsByTagName ( 'td' )[ j ].innerHTML;
+                            tableObject[tableTitle] = tableSingleRow.getElementsByTagName ('td')[j].innerHTML;
                         }
                         tableArray.push(tableObject);
                     }
